syntax="proto3";

package protobuf;

option go_package="github.com/YanDanilin/ParallelProg/protobuf";

message RequestToConnect {
    string WorkerHost = 1;
    string WorkerPort = 2;
	string ManagerPort = 3;
}

message Task {
    bool Ack = 1;
    string Array = 2;
    bool InProcess = 3;
}